feat(refector): add exclude parameter ClassUtils.loadJarFilesToFolder